# SlidingPuzzles

./: .gitignore  CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  README.md  main.cpp  plan-projektu.adoc
docs/: .$class-diagram.drawio.svg.bkp  plan-projektu.adoc  plan-projektu.html  raport.adoc
game/: Board.cpp  Board.h  GameScreen.cpp  GameScreen.h  GameScreen.ui  GameScreenViewModel.cpp  GameScreenViewModel.h
game/board/: Board.cpp  Board.h  BoardPreview.cpp  BoardPreview.h  BoardPreview.ui  RandomBoardFactory.cpp  RandomBoardFactory.h
game/board/tiles/: EmptyTile.cpp  EmptyTile.h  NumberTile.cpp  NumberTile.h  Tile.h  ValueTile.h
game/dialog/: GameLostDialog.cpp  GameLostDialog.h  GameLostDialog.ui  GameWonDialog.cpp  GameWonDialog.h  GameWonDialog.ui
menu/: MainMenu.cpp  MainMenu.h  MainMenu.ui  MenuScreen.cpp  MenuScreen.h  MenuScreen.ui
settings/: GameSettingsScreen.cpp  GameSettingsScreen.h  GameSettingsScreen.ui  GameSettingsScreenViewModel.cpp  GameSettingsScreenViewModel.h
storage/: ResultsStorage.cpp  ResultsStorage.h
